--- a/internetdefense/apps/campaigns/locale/en/LC_MESSAGES/django.po
+++ b/internetdefense/apps/campaigns/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-03 02:59-0600\n"
+"POT-Creation-Date: 2012-12-04 15:46-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -77,7 +77,7 @@ msgid "Privacy Policy"
 msgstr ""
 
 #: templates/campaigns/itu/modal.html:21
-msgid "On Dec 3rd"
+msgid "This Week"
 msgstr ""
 
 #: templates/campaigns/itu/modal.html:46
