--- a/internetdefense/apps/campaigns/locale/en/LC_MESSAGES/django.po
+++ b/internetdefense/apps/campaigns/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-04 15:46-0600\n"
+"POT-Creation-Date: 2012-12-06 09:35-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,6 +40,7 @@ msgid ""
 msgstr ""
 
 #: templates/campaigns/itu/banner.html:23
+#: templates/campaigns/itu/modal.html:22
 msgid "Learn more"
 msgstr ""
 
@@ -78,6 +79,13 @@ msgstr ""
 
 #: templates/campaigns/itu/modal.html:21
 msgid "This Week"
+msgstr ""
+
+#: templates/campaigns/itu/modal.html:22
+msgid ""
+"They're meeting right now. Contact your leaders! Tell them: \"I don't trust "
+"the world's governments to run the global Internet. Don't give the ITU any "
+"more power.\""
 msgstr ""
 
 #: templates/campaigns/itu/modal.html:46
